# polygon_proxy_test

./: .env.example  .gitignore  README.md  pyproject.toml
src/app/adapters/motor_mongodb/: gateway.py
src/app/adapters/polygon_api/: gateway.py
src/app/api/: depends_stub.py  root.py  stocks.py
src/app/application/: stocks.py
src/app/application/models/: __init__.py  stock.py
src/app/application/protocols/: database.py  external_api.py
src/app/celery/: __init__.py  celery_app.py
src/app/celery/tasks/: periodic_tasks.py  stocks_tasks.py
src/app/config/: base.py
src/app/main/: di.py  web.py
